cherry-picked: Fixed canvas injected at the wrong position

--- a/plugins/visualizer/empty-player.css
+++ b/plugins/visualizer/empty-player.css
@@ -1,9 +1,5 @@
-#player {
-  margin: 0 !important;
-  background: black;
-}
-
-#song-image,
-#song-video {
-  display: none !important;
+#visualizer {
+  position: absolute;
+  z-index: 1;
+  background-color: black;
 }
